# ablecliks

./: .gitignore  README.md  cliks.toml.example  pyproject.toml
scripts/: bootstrap_demo.py
src/cliks/: __init__.py  __main__.py  assembler.py  builder.py  cli.py  config.py  manifest.py  models.py  patcher.py  paths.py  report.py  scanner.py  validator.py
templates/: chain_template.xml  cliks-template.adg  rack_header.xml
tests/: conftest.py  helpers.py  test_builder.py  test_models.py  test_paths.py  test_scanner.py  test_validator.py
